--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@ RAG-System-Eval-DeepDive-langsmith.ipynb
 *.csv
 .DS_Store
 *.pptx
+.conda
+.venv
+aws_mlflow-0.0.1-py3-none-any.whl
+rag_llama_testing.ipynb
+RAG-System-Eval-DeepDive-langsmith.ipynb
+mlflow_run_predictions.csv
+./ragas
+*.pyc
