--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-awscli==1.32.19
-boto3==1.34.19
-botocore==1.34.19
-langchain==0.1.0
-langsmith==0.0.83
-nltk<4.0.0 #used to be 3.7
-opensearch-py==2.4.2
+awscli==1.32.87 #==1.32.19
+boto3==1.34.87 #==1.34.19
+botocore==1.34.8 #==1.34.19
+python-dotenv
+nltk==3.8.1 #<4.0.0 #used to be 3.7
+opensearch-py==2.4.2 #2.5.0
 plotly==5.9.0
 pypdf==3.17.4
 python-dotenv==1.0.0
@@ -15,19 +14,15 @@ sagemaker==2.203.1
 matplotlib==3.8.2
 sympy==1.12
 nbformat==5.9.2
-nest-asyncio
-#fm eval requires Python 3.10
+nest-asyncio==1.6.0
 ipywidgets
 pandas==2.1.3
-fmeval==0.3.0
-# for RAGAS
-llama-index
+llama-index==0.9.38
 langchainhub
-boto3
 pysbd
 datasets
 torch
 sentence-transformers
-langchain==0.1.5
+langchain==0.1.16
 ./ragas-aws-1.0.tar.gz
-mlfow==2.10.0
+mlflow==2.10.0 #==2.10.2
