--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,5 @@ datasets
 torch
 sentence-transformers
 langchain==0.1.16
-./ragas-aws-1.0.tar.gz
+ragas==0.1.7 #./ragas-aws-1.0.tar.gz
 mlflow==2.10.0 #==2.10.2
