--- a/olderVersions/requirements.txt
+++ b/olderVersions/requirements.txt
@@ -1,8 +1,9 @@
-boto3==1.34.87
-botocore==1.34.93
+awscli==1.32.87 #==1.32.19
+boto3==1.34.87 #==1.34.19
+botocore==1.34.8 #==1.34.19
 python-dotenv
-nltk==3.8.1
-opensearch-py==2.4.2
+nltk==3.8.1 #<4.0.0 #used to be 3.7
+opensearch-py==2.4.2 #2.5.0
 plotly==5.9.0
 pypdf==3.17.4
 python-dotenv==1.0.0
@@ -16,12 +17,12 @@ nbformat==5.9.2
 nest-asyncio==1.6.0
 ipywidgets
 pandas==2.1.3
+llama-index==0.9.38
 langchainhub
 pysbd
 datasets
 torch
 sentence-transformers
 langchain==0.1.16
-langchain-community==0.0.34
-ragas==0.1.7
-mlflow==2.10.0
+ragas==0.1.7 #./ragas-aws-1.0.tar.gz
+mlflow==2.10.0 #==2.10.2
