--- a/dev-rageval.env
+++ b/dev-rageval.env
@@ -1,5 +1,5 @@
-OPENSEARCH_COLLECTION='t4w9zgcjn1p0v7q7qys4.us-east-1.aoss.amazonaws.com'
-BEDROCK_KNOWLEDGEBASE_ID='CSIVOL9MUC'
+OPENSEARCH_COLLECTION='XXX'
+BEDROCK_KNOWLEDGEBASE_ID='XXX'
 REGION=us-east-1
 MLFLOW_TRACKING_ENABLED=False
 MLFLOW_TRACKING_URI=XXX
