--- a/dev-rageval.env
+++ b/dev-rageval.env
@@ -1,5 +1,5 @@
-OPENSEARCH_COLLECTION='inrll2ecmxejndtzsige.us-east-1.aoss.amazonaws.com'
-BEDROCK_KNOWLEDGEBASE_ID='RFYPDVKYBU'
+OPENSEARCH_COLLECTION='XXX'
+BEDROCK_KNOWLEDGEBASE_ID='XXX'
 REGION=us-east-1
 MLFLOW_TRACKING_ENABLED=False
 MLFLOW_TRACKING_URI=XXX
